refactor!: major modifications to BaseComponent and component library
NOTE: htmx has been entirely removed as a dependency of the core
component library, and should be opted-in as an enduser of the library

BREAKING CHANGE: removed `is_page=...` from `render_component`, changed
behavior of rendering components to account for lists, removed fields
from several of the components in favor of new attributes system.

--- a/quikui/templates/CheckboxInput.html
+++ b/quikui/templates/CheckboxInput.html
@@ -1,10 +1,2 @@
-<input id="{{ id }}" name="{{ id }}" type="{{ type }}">
-{% if label %}
-<label for="{{ id }}">
-{% if label|is_component %}
-  {{ label.model_dump_html()|safe }}
-{% else %}
-  {{ label }}
-{% endif %}
-</label>
-{% endif %}
+<input name="{{ name }}" type="{{ type }}" {{ __extra_attrs__ }}>
+{% if label -%}{{ label }}{%- endif %}
