--- a/quikui/templates/Anchor.html
+++ b/quikui/templates/Anchor.html
@@ -1,8 +1,1 @@
-<a href={{ route }} target={{ target }}>
-{% if content|is_component %}
-  {# NOTE: `content` is safe because it has been pre-rendered #}
-  {{ content.model_dump_html()|safe }}
-{% else %}
-  {{ content }}
-{% endif %}
-</a>
+<a href={{ route }} {{ __extra_attrs__ }}>{{ content }}</a>
