--- a/quikui/templates/Heading.html
+++ b/quikui/templates/Heading.html
@@ -1,8 +1,1 @@
-<h{{ level }} class="mb-3">
-{% if content|is_component %}
-  {# NOTE: `content` is safe because it has been pre-rendered #}
-  {{ content.model_dump_html()|safe }}
-{% else %}
-  {{ content }}
-{% endif %}
-</h{{ level }}>
+<h{{ level }} {{ __extra_attrs__ }}>{{ content }}</h{{ level }}>
