--- a/quikui/templates/FormInput.html
+++ b/quikui/templates/FormInput.html
@@ -4,9 +4,9 @@
 {%- endif %}
 {% block input %}
 <input
+  {{ __extra_attrs__ }}
   type="{{ type }}"
   name="{{ name }}"
   {% if value %}value="{{ value }}"{% endif %}
-  {% if required %}required{% endif %}
-  {{ __extra_attrs__ }}>
+  {% if required %}required{% endif %}>
 {% endblock %}
