feat: allow custom renders (#4)
* fix: add `py.typed` registration, fix package resources install

* feat: add ability to override template (replacing render_model)

* refactor: use custom exceptions for decorator

* refactor: allow using Single- and Multi-item components w/o kwargs

* feat: allow use of custom wrapper element for iterables (defaults div)

* refactor: use `qk` as shortened form instead of `qc`

* refactor: add more clear dynamic content to example

* refactor: allows render CSS classes in sorted order (because set)

* docs: update docstrings and notes

* docs: update docstring on list to show how to use it with wrapper

* refactor: already safe to render model

* refactor: use quikui-scoped pkg and allow specifying template dir

* refactor: add quikui to scoping in template

* fix: classmethods cannot be properties anymore

* refactor: add quikui-scoping to classmethods

* refactor: use quikui-scoping for classes/attrs, make classes explicit

* fix: was not properly tracing up the class heirarchy to find env

* refactor: custom exception for no template found

* feat: add ability to select different template variants

* refactor: use `variant` instead of `type`

* feat: allow item css/attr in list to be a per-item function

* refactor: use base for Heading through some property trick

* refactor: unnecessary to include `content` on `_SingleContentComponent`

* refactor: unnecessary to serialize items as content w/ wrapper feat

* refactor: update Image

* feat: allow adding extra kwargs to `wrapper` initialization

* fix: not renderable error should be a normal 500, not HTTPException

* feat: allow dynamically rendering template from an environment

* refactor: give better demonstration of custom component

--- a/quikui/templates/_SingleContentComponent.html
+++ b/quikui/templates/_SingleContentComponent.html
@@ -1,1 +1,5 @@
-<{{ __component_name__|lower }} {{ __extra_attrs__ }}>{{ content }}</{{ __component_name__|lower }}>
+<{{ __quikui_component_name__|lower }}
+{%- if quikui_css_classes %} class="{{ quikui_css_classes }}"{% endif %}
+{%- if quikui_extra_attributes %} {{ quikui_extra_attributes }}{% endif %}>
+  {{- content -}}
+</{{ __quikui_component_name__|lower }}>
