--- a/quikui/templates/_MultiItemComponent.html
+++ b/quikui/templates/_MultiItemComponent.html
@@ -1,3 +1,5 @@
-<{{ __component_name__|lower }} {{ __extra_attrs__ }}>
-  {% for item in items -%}{{ item }}{%- endfor %}
-</{{ __component_name__|lower }}>
+<{{ __quikui_component_name__|lower }}
+{%- if quikui_css_classes %} class="{{ quikui_css_classes }}"{% endif %}
+{%- if quikui_extra_attributes %} {{ quikui_extra_attributes }}{% endif %}>
+  {%- for item in items -%}{{ item }}{%- endfor -%}
+</{{ __quikui_component_name__|lower }}>
